@@ -1,3 +1,10 @@
+openmolar (0.5.0-beta11-0~__DIST__0) __DIST__; urgency=low
+
+  * New Upstream
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 16 Dec 2013 23:58:03 +0000
+
+
 openmolar (0.5.0-beta10-0~__DIST__0) __DIST__; urgency=low
 
   * New Upstream
